kubernetes/apps/backend-go/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-go
  namespace: dev
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 5000
  selector:
    name: backend-go
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-go
  namespace: dev
spec:
  selector:
    matchLabels:
      name: backend-go
  template:
    metadata:
      labels:
        name: backend-go
    spec:
      containers:
        - name: backend
          image: $CONTAINER_REGISTRY/backend-go:$VERSION
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5000
          resources:
            requests:
              cpu: 50m
              memory: 50Mi
            limits:
              cpu: 50m
              memory: 50Mi
          readinessProbe:
            exec:
              command:
                - "curl"
                - "-f"
                - "http://localhost:5000/healhtz" 
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 5
            failureThreshold: 5
          livenessProbe:
            exec:
              command:
                - "curl"
                - "-f"
                - "http://localhost:5000/healhtz" 
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 5
            failureThreshold: 5
