kubernetes/apps/backend-go/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-go
  namespace: dev
spec:
  rules:
  - host: go.bonestealer.xyz
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: service-go
              port:
                number: 5000
